#3625 - Fixed the Advirtisement tooltip alignment issue

--- a/includes/admin-style.css
+++ b/includes/admin-style.css
@@ -794,6 +794,7 @@ visibility: hidden;
 }
 .redux-main .child_opt .afw-tooltip{ 
     margin-top: -8px;
+    right: 280px !important;
 }
 .redux-main .child_opt .redux_field_th{  background: #f9f9f9;padding:23px 10px 23px 20px;
       margin-right: -16px;}
